:art: Fix FeaturedVideos section with better spacing in iPad

--- a/src/sass/sections/featured-videos.scss
+++ b/src/sass/sections/featured-videos.scss
@@ -7,7 +7,15 @@
   margin-top: -8rem;
   @extend %padding;
 
+  @media screen and (max-width: 768px) {
+    margin-top: -6rem;
+  }
+
   .video-card {
     max-width: calc(33% - 1rem);
+
+    @media screen and (max-width: 768px) {
+      max-width: calc(50% - 1rem);
+    }
   }
 }
